--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           <h2 class="features-title" hidden>Company philosophy</h2>
           <ul class="features-list list">
             <li class="features-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Strategy</h3>
               <p class="features-list-description">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Punctuality</h3>
               <p class="features-list-description">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Diligence</h3>
               <p class="features-list-description">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-list-title">Technologies</h3>
               <p class="features-list-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -150,6 +170,36 @@
               <div class="card-team-content">
                 <h3 class="team-list-title">Mark Guerrero</h3>
                 <p class="team-list-profession">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -163,6 +213,36 @@
               <div class="card-team-content">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-list-profession">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -176,6 +256,36 @@
               <div class="card-team-content">
                 <h3 class="team-list-title">Camila Garcia</h3>
                 <p class="team-list-profession">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -189,7 +299,87 @@
               <div class="card-team-content">
                 <h3 class="team-list-title">Daniel Wilson</h3>
                 <p class="team-list-profession">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link link" href="">
+                      <svg class="social-icon-list" width="16px" height="16px">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!---------------------- Customers ------------------------->
+      <section class="Customers">
+        <div class="container">
+          <h2 class="Customers-title">Customers</h2>
+          <ul class="Customers-list list">
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="Customers-list-item">
+              <a class="Customers-link link" href="">
+                <svg class="Customers-list-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -197,14 +387,49 @@
     </main>
     <!------------------------ footer --------------------------->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html">
-          Web<span class="footer-logo-color">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="footer-info">
+          <a class="logo-footer link" href="./index.html">
+            Web<span class="footer-logo-color">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-title">Social media</p>
+          <ul class="footer-list list">
+            <li class="footer-list-item">
+              <a class="footer-list-link link" href="">
+                <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a class="footer-list-link link" href="">
+                <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a class="footer-list-link link" href="">
+                <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a class="footer-list-link link" href="">
+                <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
